[project]
name = "xenarch"
version = "0.1.2"
description = "Python SDK for Xenarch — x402 payment middleware for AI agents and publishers. FastAPI-native HTTP 402 pay-per-request with USDC micropayments on Base L2. Non-custodial, 0% fee. A pay-per-crawl alternative to Cloudflare."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Xenarch", email = "hello@xenarch.dev"},
]
keywords = [
    "xenarch", "x402", "http-402", "mcp", "micropayments",
    "ai-agents", "claude", "cursor", "langchain", "crewai",
    "fastapi", "usdc", "base", "base-l2", "non-custodial",
    "pay-per-crawl", "cloudflare-alternative", "tollbit-alternative",
    "pay-json", "agent-payments",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial :: Point-Of-Sale",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "cryptography>=42",
]

[project.urls]
Homepage = "https://xenarch.dev"
Repository = "https://github.com/xenarch-ai/xenarch-sdks"
Documentation = "https://github.com/xenarch-ai/xenarch-sdks/tree/main/python"
Issues = "https://github.com/xenarch-ai/xenarch-sdks/issues"

[project.optional-dependencies]
fastapi = ["fastapi>=0.100"]
agent = ["web3>=6.0", "eth-account>=0.11"]
langchain = ["langchain-core>=0.2"]
crewai = ["crewai>=0.50"]
x402 = [
    "x402>=2.8,<3",
    "eth-account>=0.11",
    "pay.json>=1.1,<2",
]
all = ["xenarch[fastapi,agent,langchain,crewai,x402]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["tests/", "uv.lock"]

[tool.hatch.build.targets.wheel]
packages = ["xenarch", "x402_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "contract: tests that hit a live HTTP endpoint (local platform or Coinbase reference). Skipped unless the endpoint is reachable.",
    "property: hypothesis-powered property-based tests. Slower than unit tests.",
]

[tool.mypy]
files = ["xenarch/tools"]
strict = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["x402.*", "pay_json.*"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "fastapi>=0.100",
    "hypothesis>=6.100",
    "mypy>=1.11",
    "langchain>=0.2",
    "web3>=6.0",
    "eth-account>=0.11",
    "crewai>=0.50",
    "x402>=2.8,<3",
    "pay.json>=1.1,<2",
]
